# android-opencl-compute

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/xcyoung/android/gpu/compute/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CL_Adder.cpp  CMakeLists.txt  JNI.cpp  cl_stub.c
app/src/main/cpp/include/: CL_Adder.h  cl_stub.h  log.h
app/src/main/java/me/xcyoung/android/gpu/compute/: MainActivity.java  Test.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/me/xcyoung/android/gpu/compute/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
